# src/App/Bundle/LoginBundle/Controller/LoginController.php
@@ -9,6 +9,7 @@
 namespace App\Bundle\LoginBundle\Controller;
 
 use App\Bundle\LoginBundle\Annotation\Parameter;
+use App\Bundle\LoginBundle\Entity\AdminMaster;
 use App\Bundle\LoginBundle\Entity\GameAdmin;
 use App\Bundle\LoginBundle\Utils\Login\LoginHelper;
 use Doctrine\ORM\EntityManagerInterface;
@@ -28,8 +29,10 @@ class LoginController extends AppApiController
      * @param EntityManagerInterface $entityManager
      *
      * @Route("/api/simplelogin")
+     * @Parameter(name="username", require=true)
+     * @Parameter(name="password", require=true)
      *
-     * @return JsonResponse
+     * @return JsonResponse|BadRequestHttpException
      * @throws \Doctrine\ORM\NonUniqueResultException
      */
     public function simpleLoginAction(EntityManagerInterface $entityManager, Request $request)
@@ -40,22 +43,25 @@ class LoginController extends AppApiController
 //        $userName = $request->request->get('username');
 //        $password = $request->request->get('password');
 
-        /** @var GameAdmin $user */
-        $user = $entityManager->getRepository('AppLoginBundle:GameAdmin')
-            ->loadAdminByUserName($userName);
+        /** @var AdminMaster $user */
+        $user = $entityManager->getRepository('AppLoginBundle:AdminMaster')
+            ->findOneBy(['aphone' => $userName]);
 
-        if ($user === NULL) {
+        if ($user === null) {
             throw new BadRequestHttpException("该用户不存在");
         }
         $helper          = new LoginHelper($user, $this->get('snc_redis.default'));
         $encryptPassword = md5($password);
 
-        if ($encryptPassword == $user->getPassword()) {
-            $user->setLastLoginIp($request->getClientIp());
-            $user->setLastLoginTime(new \DateTime());
+        if ($encryptPassword == $user->getApswd()) {
+            $permission = $entityManager->getRepository('AppLoginBundle:AdminMaster')->getPermission($user->getId(), $user->getGroupid());
+//            $user->setLastLoginIp($request->getClientIp());
+//            $user->setLastLoginTime(new \DateTime());
             list($token,) = $helper->generateLoginToken(false, false);
+
             return $this->success([
-                'token' => $token,
+                'token'      => $token,
+                'permission' => $permission,
             ]);
         }
         throw new BadRequestHttpException("账号错误");
