# web/swagger/swagger.yml
@@ -215,22 +215,75 @@ paths:
       summary: 管理员登陆
       parameters:
         - name: data
-        in: body
-        description: 用户登录信息
-        required: true
-        schema:
-          required:
-            - username
-            - password
-          properties:
-            username:
-              description: 用户账号
-              type: string
-              example: 'admin'
-            password:
-              description: 用户密码
-              type: string
-              example: 1234qwer
+          in: body
+          description: 用户登录信息
+          required: true
+          schema:
+            required:
+              - username
+              - password
+            properties:
+              username:
+                description: 用户账号
+                type: string
+                example: 'admin'
+              password:
+                description: 用户密码
+                type: string
+                example: 1234qwer
+      responses:
+        '200':
+          description: '[SUCCESS]设置成功'
+          schema:
+            $ref: '#/definitions/ApiResponse'
+  /api/add/admin:
+    post:
+      tags:
+        - permission
+      summary: 添加代理
+      parameters:
+        - name: data
+          in: body
+          description: 代理信息
+          required: true
+          schema:
+            required:
+              - groupid
+              - aphone
+              - apswd
+              - atype
+              - astatus
+              - agold
+              - acard
+            properties:
+              groupid:
+                description: 分组id
+                type: string
+                example: '1'
+              aphone:
+                description: 用户账号
+                type: integer
+                example: 1314578585
+              apswd:
+                description: 用户密码
+                type: string
+                example: '1qaz2wsx'
+              atype:
+                description: 代理类型
+                type: integer
+                example: 1
+              astatus:
+                description: 用户状态
+                type: integer
+                example: 1
+              agold:
+                description: 代理金币数
+                type: integer
+                example: 10
+              acard:
+                description: 代理房卡数
+                type: integer
+                example: 111
       responses:
         '200':
           description: '[SUCCESS]设置成功'
